2003-03-10  Luke Gorrie  <luke@bluetail.com>

	* elisp/distel.el: Added "C-x SPC" keybinding for toggling
	breakpoints, for consistency with the rest of Emacs.

	* elisp/erl-service.el: fdoc commands now accept a numeric prefix
	to mean, "rebuild the doc database."

2003-03-06  Luke Gorrie  <luke@bluetail.com>

	* elisp/edb.el: Improved breakpoint handling.

	* elisp/erl-service.el (erl-fdoc-apropos, erl-fdoc-describe):
	Added commands for finding documentation via 'fdoc'.

2003-02-17  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-check-backend): Now using the
	`erl-nodeup-hook' to automatically check that the `distel' module
	is loadable by Erlang nodes we connect to, and print a warning if
	not. You can avoid this by setting `distel-inhibit-backend-check'
	to t.

2003-01-15  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-read-nodename): The universal prefix
	argument (C-u) means "prompt me for which node to use", but
	numeric prefixes no longer do. This is to free them up for other
	purposes.
	(erl-find-source-under-point): Numeric prefix argument forces the
	same behaviour as `distel-tags-compliant', i.e. prompt for
	function name. Useful for jumping to functions that aren't being
	called anywhere handy.
	(erl-refactor-subfunction): Slightly improved error reportage.

	* elisp/edb.el (edb-new-attach-buffer): Inhibiting
	`erlang-new-file-hook' in attach buffers. It was misfiring and
	causing problems.

	* elisp/erl-service.el (erl-refactor-subfunction): Small
	portability fix; this feature probably only worked in the CVS
	version of Emacs 21 previously. Now also works in 21.2.1.

2003-01-14  Luke Gorrie  <luke@bluetail.com>

	* elisp/erl-service.el (erl-refactor-subfunction): New refactoring
	command: takes all expressions in the region and makes a new
	function out of them. The original text is replaced by a call to
	the new function, and all needed variables are passed as